curso de react js desde cero

--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://https://github.com/Luisamnh/curso-react-intro/build/"
 }
